Refactor Charts PAGE

--- a/templates/apps/charts.html
+++ b/templates/apps/charts.html
@@ -12,22 +12,14 @@
         class="p-4 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 sm:p-6 dark:bg-gray-800">
         <div class="items-center justify-between pb-4 border-b border-gray-200 sm:flex dark:border-gray-700">
           <div class="w-full mb-4 sm:mb-0">
-            <h3 class="text-base font-normal text-gray-500 dark:text-gray-400">Sales by category</h3>
-            <span class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white">Products</span>
-            <p class="flex items-center text-base font-normal text-gray-500 dark:text-gray-400">
-              <span class="flex items-center mr-1.5 text-sm text-green-500 dark:text-green-400">
-                <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
-                  aria-hidden="true">
-                  <path clip-rule="evenodd" fill-rule="evenodd"
-                    d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z">
-                  </path>
-                </svg>
-                2.5%
-              </span>
-              Since last month
-            </p>
+            <h3 class="text-base font-normal text-gray-500 dark:text-gray-400">
+              ApexCharts Sample
+            </h3>
+            <span class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white">
+              Charts (Template View)
+            </span>
             <span class="block mr-1.5 text-sm text-blue-500 dark:text-blue-400 mt-5">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+              <a target="_blank" class="underline" href="/tables/">Product Table</a> data is converted to JSON, injected into the template and used by ApexChart instances (Bar and PIE). 
             </span>
           </div>
           <div class="w-full max-w-lg">
@@ -141,22 +133,14 @@
         class="p-4 bg-white border border-gray-200 rounded-lg shadow-sm dark:border-gray-700 sm:p-6 dark:bg-gray-800">
         <div class="items-center justify-between pb-4 border-b border-gray-200 sm:flex dark:border-gray-700">
           <div class="w-full mb-4 sm:mb-0">
-            <h3 class="text-base font-normal text-gray-500 dark:text-gray-400">Sales by category</h3>
-            <span class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white">Products</span>
-            <p class="flex items-center text-base font-normal text-gray-500 dark:text-gray-400">
-              <span class="flex items-center mr-1.5 text-sm text-green-500 dark:text-green-400">
-                <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"
-                  aria-hidden="true">
-                  <path clip-rule="evenodd" fill-rule="evenodd"
-                    d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z">
-                  </path>
-                </svg>
-                2.5%
-              </span>
-              Since last month
-            </p>
+            <h3 class="text-base font-normal text-gray-500 dark:text-gray-400">
+              ApexCharts Sample
+            </h3>
+            <span class="text-2xl font-bold leading-none text-gray-900 sm:text-3xl dark:text-white">
+              Charts via <a target="_blank" class="underline" href="/api/product/">API</a>
+            </span>
             <span class="block mr-1.5 text-sm text-blue-500 dark:text-blue-400 mt-5">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.
+              Product table data is consumed from the <a target="_blank" class="underline" href="/api/product/">API</a> and used by ApexChart instances (Bar and PIE).
             </span>
           </div>
           <div class="w-full max-w-lg">
@@ -436,10 +420,10 @@
   };
 
   (async () => {
-    const productsBarChart = new ApexCharts(document.getElementById('products-bar-chart-api'), getProductsBarChart(products));
+    const productsBarChart = new ApexCharts(document.getElementById('products-bar-chart'), getProductsBarChart(products));
     productsBarChart.render();
 
-    const productsPieChart = new ApexCharts(document.getElementById('products-pie-chart-api'), getProductsPieChart(products));
+    const productsPieChart = new ApexCharts(document.getElementById('products-pie-chart'), getProductsPieChart(products));
     productsPieChart.render();
 
     document.addEventListener('dark-mode', function () {
