--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -23,7 +23,7 @@
             <img src="https://flowbite-admin-dashboard.vercel.app/images/logo.svg" class="h-8 mr-3"
               alt="FlowBite Logo" />
             <span
-              class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Flowbite</span>
+              class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white">Rocket</span>
           </a>
           <form action="#" method="GET" class="hidden lg:block lg:pl-3.5">
             <label for="topbar-search" class="sr-only">Search</label>
