stay expanded sidebar

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -82,7 +82,7 @@
                                     clip-rule="evenodd"></path>
                             </svg>
                         </button>
-                        <ul id="dropdown-dashboard" class="py-2 space-y-2 {% if 'apps' in parent %}block {% else %} hidden {% endif %}">
+                        <ul id="dropdown-dashboard" class="py-2 space-y-2 block">
                             <li>
                                 <a href="{% url 'datatables' %}"
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700 {% if 'datatables' in segment %} bg-gray-100 dark:bg-gray-700 {% endif %}">DataTables</a>
