--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -155,6 +155,15 @@
                             <span class="ml-3" sidebar-toggle-item>PRO Charts</span>
                         </a>
                     </li>
+                    <li>
+                        <a target="_blank" rel="noopener" href="https://rocket-django-pro.onrender.com/file-manager/"
+                            class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700">
+                            <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2 5a1 1 0 0 0-1 1v12a.969.969 0 0 0 .933 1h8.1a1 1 0 0 0 1-1.033M10 1v4a1 1 0 0 1-1 1H5m10-4v12a.97.97 0 0 1-.933 1H5.933A.97.97 0 0 1 5 14V5.828a2 2 0 0 1 .586-1.414l2.828-2.828A2 2 0 0 1 9.828 1h4.239A.97.97 0 0 1 15 2Z"/>
+                            </svg>
+                            <span class="ml-3" sidebar-toggle-item>PRO File Manager</span>
+                        </a>
+                    </li>                    
                 </ul>
                 <div class="pt-2 space-y-2">
                     <a href="https://github.com/app-generator/rocket-django" target="_blank"
