--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -4,16 +4,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Rocket Django - Styled with Tailwind/Flowbite AppSeed</title>
+<title>Rocket Django - Styled with Tailwind/Flowbite | AppSeed</title>
+
 <meta name="description"
   content="Open-Source Django starter styled with Tailwind/Flowbite - Actively supported by AppSeed.">
 
-<link rel="canonical" href="https://github.com/app-generator/rocket-django">
+<link rel="canonical" href="https://appseed.us/product/rocket/django/">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
-  rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
 <link rel="apple-touch-icon" sizes="180x180" href="https://flowbite-admin-dashboard.vercel.app/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://flowbite-admin-dashboard.vercel.app/favicon-32x32.png">
