--- a/templates/layouts/base-auth.html
+++ b/templates/layouts/base-auth.html
@@ -10,9 +10,9 @@
     <meta name="author" content="Themesberg">
     <meta name="generator" content="Hugo 0.68.3">
 
-    <title>Tailwind CSS Sign in/Login Page - Flowbite</title>
+    <title>Rocket Django - Styled with Tailwind/Flowbite | AppSeed</title>
 
-    <link rel="canonical" href="https://flowbite-admin-dashboard.vercel.app/authentication/sign-in/">
+    <link rel="canonical" href="https://appseed.us/product/rocket/django/">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
