--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -105,7 +105,7 @@
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700 {% if 'charts' in segment %} bg-gray-100 dark:bg-gray-700 {% endif %}">Charts</a>
                             </li>
                             <li>
-                                <a href="/api/product/"
+                                <a href="/api/product/" target="_blank"
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">API</a>
                             </li>
                             <li>
