--- a/templates/pages/starter.html
+++ b/templates/pages/starter.html
@@ -27,7 +27,7 @@
                 <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Rocket</span>
             </a>
             <div class="flex md:order-2">
-                <a href="https://github.com/app-generator/rocket-django" target="_blank"
+                <a href="https://appseed.us/product/rocket/django/" target="_blank"
                     class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     Download</a>
                 <button data-collapse-toggle="navbar-cta" type="button"
