--- a/templates/authentication/sign-up.html
+++ b/templates/authentication/sign-up.html
@@ -4,14 +4,14 @@
 {% block content %}
 
     <div class="flex flex-col items-center justify-center px-6 pt-8 mx-auto md:h-screen pt:mt-0 dark:bg-gray-900">
-        <a href="https://flowbite-admin-dashboard.vercel.app/" class="flex items-center justify-center mb-8 text-2xl font-semibold lg:mb-10 dark:text-white">
+        <a href="/" class="flex items-center justify-center mb-8 text-2xl font-semibold lg:mb-10 dark:text-white">
             <img src="https://flowbite-admin-dashboard.vercel.app/images/logo.svg" class="mr-4 h-11" alt="FlowBite Logo">
-            <span>Flowbite</span>  
+            <span>Rocket Django</span>  
         </a>
         <!-- Card -->
         <div class="w-full max-w-xl p-6 space-y-8 sm:p-8 bg-white rounded-lg shadow dark:bg-gray-800">
             <h2 class="text-2xl font-bold text-gray-900 dark:text-white">
-                Create a Free Account
+                Register
             </h2>
             <form method="post" class="mt-8 space-y-6">
                 {% csrf_token %}
@@ -33,7 +33,10 @@
                 </div>
                 <button type="submit" class="w-full px-5 py-3 text-base font-medium text-center text-white bg-primary-700 rounded-lg hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 sm:w-auto dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Create account</button>
                 <div class="text-sm font-medium text-gray-500 dark:text-gray-400">
-                    Already have an account? <a href="{% url "signin" %}" class="text-primary-700 hover:underline dark:text-primary-500">Login here</a>
+                    <a href="{% url "signin" %}" class="text-primary-700 hover:underline dark:text-primary-500">Sign IN</a>
+                    &nbsp; &bull; &nbsp; 
+                    <a href="https://docs.appseed.us/products/rocket/django/"  target="_blank"
+                       class="text-primary-700 hover:underline dark:text-primary-500">Documentation</a>                    
                 </div>
             </form>
         </div>
