--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -9,7 +9,7 @@
 <meta name="description"
   content="Open-Source Django starter styled with Tailwind/Flowbite - Actively supported by AppSeed.">
 
-<link rel="canonical" href="https://appseed.us/product/rocket/django/">
+<link rel="canonical" href="https://app-generator.dev/product/rocket/django/">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
