--- a/templates/authentication/sign-up.html
+++ b/templates/authentication/sign-up.html
@@ -35,7 +35,7 @@
                 <div class="text-sm font-medium text-gray-500 dark:text-gray-400">
                     <a href="{% url "signin" %}" class="text-primary-700 hover:underline dark:text-primary-500">Sign IN</a>
                     &nbsp; &bull; &nbsp; 
-                    <a href="https://docs.appseed.us/products/rocket/django/"  target="_blank"
+                    <a href="https://app-generator.dev/docs/products/django/rocket/index.html"
                        class="text-primary-700 hover:underline dark:text-primary-500">Documentation</a>                    
                 </div>
             </form>
