--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -179,7 +179,7 @@
                     </li>                    
                 </ul>
                 <div class="pt-2 space-y-2">
-                    <a href="https://appseed.us/product/rocket/django/" target="_blank"
+                    <a href="https://app-generator.dev/product/rocket/django/"
                         class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700">
                       
                         <svg  class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
@@ -189,7 +189,7 @@
                           
                         <span class="ml-3" sidebar-toggle-item>Download</span>
                     </a>
-                    <a href="https://docs.appseed.us/products/rocket/django/" target="_blank"
+                    <a href="https://app-generator.dev/docs/products/django/rocket/index.html"
                         class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700">
                         <svg class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
                             fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -199,7 +199,7 @@
                         </svg>
                         <span class="ml-3" sidebar-toggle-item>Documentation</span>
                     </a>
-                    <a href="https://appseed.us/product/rocket-pro/django/" target="_blank"
+                    <a href="https://app-generator.dev/product/rocket-pro/django/"
                         class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700">
                         <svg class="flex-shrink-0 w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900 dark:text-gray-400 dark:group-hover:text-white"
                             fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
