--- a/templates/layouts/base-auth.html
+++ b/templates/layouts/base-auth.html
@@ -12,7 +12,7 @@
 
     <title>Rocket Django - Styled with Tailwind/Flowbite | AppSeed</title>
 
-    <link rel="canonical" href="https://appseed.us/product/rocket/django/">
+    <link rel="canonical" href="https://app-generator.dev/product/rocket/django/">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
