--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -32,7 +32,7 @@
         {% include "includes/footer.html" %}
       {% endblock footer %}
       <p class="my-10 text-sm text-center text-gray-500">
-        &copy; Flowbite - Coded by <a href="https://appseed.us" class="hover:underline" target="_blank">AppSeed</a>
+        &copy; Flowbite - Coded by <a href="https://appseed.us" class="hover:underline">App Generator</a>
       </p>
 
     </div>
