--- a/templates/pages/starter.html
+++ b/templates/pages/starter.html
@@ -27,7 +27,7 @@
                 <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Rocket</span>
             </a>
             <div class="flex md:order-2">
-                <a href="https://appseed.us/product/rocket/django/" target="_blank"
+                <a href="https://app-generator.dev/product/rocket/django/"
                     class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     Download</a>
                 <button data-collapse-toggle="navbar-cta" type="button"
@@ -65,7 +65,7 @@
                 <p class="mb-6 max-w-2xl font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">
                     Open-Source starter built with <strong>Django & Tailwind/Flowbite</strong>.
                 </p>
-                <a href="https://docs.appseed.us/products/rocket/django/" target="_blank"
+                <a href="https://app-generator.dev/docs/products/django/rocket/index.html"
                     class="inline-flex justify-center items-center py-3 px-5 mr-3 text-base font-medium text-center text-white rounded-lg bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-900">
                     Docs
                     <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -75,7 +75,7 @@
                             clip-rule="evenodd"></path>
                     </svg>
                 </a>
-                <a href="https://appseed.us/support/" target="_blank"
+                <a href="https://app-generator.dev/ticket/create/"
                     class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
                     Support
                 </a>
