--- a/templates/authentication/sign-in.html
+++ b/templates/authentication/sign-in.html
@@ -54,7 +54,7 @@
                 <div class="text-sm font-medium text-gray-500 dark:text-gray-400">
                     <a href="{% url "signup" %}" class="text-primary-700 hover:underline dark:text-primary-500">Register</a>
                     &nbsp; &bull; &nbsp; 
-                    <a href="https://docs.appseed.us/products/rocket/django/"  target="_blank"
+                    <a href="https://app-generator.dev/docs/products/django/rocket/index.html"
                        class="text-primary-700 hover:underline dark:text-primary-500">Documentation</a>
                 </div>
             </form>
