--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -110,16 +110,16 @@
                         </button>
                         <ul id="dropdown-dashboard" class="py-2 space-y-2 block">
                             <li>
-                                <a href="{% url 'datatables' %}"
-                                    class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700 {% if 'datatables' in segment %} bg-gray-100 dark:bg-gray-700 {% endif %}">DataTables</a>
+                                <a href="{% url 'dynamic_dt' %}"
+                                    class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700 {% if 'dynamic_dt' in segment %} bg-gray-100 dark:bg-gray-700 {% endif %}">Dynamic Tables</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'dynamic_api' %}"
+                                    class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700 {% if 'dynamic_api' in segment %} bg-gray-100 dark:bg-gray-700 {% endif %}">Dynamic API</a>
                             </li>
                             <li>
                                 <a href="{% url 'charts' %}"
                                     class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700 {% if 'charts' in segment %} bg-gray-100 dark:bg-gray-700 {% endif %}">Charts</a>
-                            </li>
-                            <li>
-                                <a href="/api/product/" target="_blank"
-                                    class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg pl-11 group hover:bg-gray-100 dark:text-gray-200 dark:hover:bg-gray-700">API</a>
                             </li>
                             <li>
                                 <a href="{% url 'tasks' %}"
