--- a/templates/dyn_api/index.html
+++ b/templates/dyn_api/index.html
@@ -38,7 +38,9 @@
                     </nav>
                 </div>
                 <div>
-                    <h2 class="mb-2 text-lg font-semibold text-gray-900 dark:text-white">Available Routes - defined in <strong>settings.DYNAMIC_DATATB</strong></h2>
+                    <h5 class="mb-2 text-lg font-semibold text-gray-900 dark:text-white">
+                        Available Routes - defined in <strong>settings.DYNAMIC_API</strong> - Read <u><a target="_blank" href="https://app-generator.dev/docs/developer-tools/dynamic-api.html">Documentation</a></u>.
+                    </h5>
                     <ul class="max-w-md space-y-1 text-gray-500 list-disc list-inside dark:text-gray-400">
                         {% for link in routes %}
                             <li>
