--- a/templates/apps/charts.html
+++ b/templates/apps/charts.html
@@ -19,7 +19,7 @@
               Charts (Template View)
             </span>
             <span class="block mr-1.5 text-sm text-blue-500 dark:text-blue-400 mt-5">
-              <a target="_blank" class="underline" href="/tables/">Product Table</a> data is converted to JSON, injected into the template and used by ApexChart instances (Bar and PIE). 
+              <a target="_blank" class="underline" href="/dynamic-dt/product/">Product Table</a> data is converted to JSON, injected into the template and used by ApexChart instances (Bar and PIE). 
             </span>
           </div>
         </div>
