--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -142,7 +142,7 @@
                         </a>
                     </li>-->
                     <li>
-                        <a target="_blank" rel="noopener" href="https://rocket-django-pro.onrender.com/tables/"
+                        <a target="_blank" rel="noopener" href="https://rocket-django-pro.onrender.com/dynamic-dt/product/"
                             class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700">
                             <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" width="20" height="14" fill="none"
@@ -154,7 +154,7 @@
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" rel="noopener" href="https://rocket-django-pro.onrender.com/charts/"
+                        <a target="_blank" rel="noopener" href="https://rocket-django-pro.onrender.com/react-charts"
                             class="flex items-center p-2 text-base text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 group dark:text-gray-200 dark:hover:bg-gray-700">
                             <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 21 21">
